add all files to Github

--- a/finalProject-checkers-game.html
+++ b/finalProject-checkers-game.html
@@ -8,5 +8,7 @@
     <script src="./js/finalProject-checkers-game.js"></script>
     <title>Final Project</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Cyber4s final project-Checkers game!!!</h1>
+  </body>
 </html>
