--- a/finalProject-checkers-game.html
+++ b/finalProject-checkers-game.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="finalProject-checkers-game.css" />
-    <script src="./js/finalProject-checkers-game.js"></script>
+    <script src="./js/BoardManager.js"></script>
+    <script src="./js/Piece.js"></script>
+    <script src="./js/App.js"></script>
     <title>Final Project</title>
   </head>
   <body>
