add turns- when it is yhe white turn- the black player can't move and the same when it is the black turn

--- a/finalProject-checkers-game.html
+++ b/finalProject-checkers-game.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="finalProject-checkers-game.css" />
     <script src="./js/BoardManager.js"></script>
     <script src="./js/Piece.js"></script>
+    <script src="./js/Game.js"></script>
     <script src="./js/App.js"></script>
+
     <title>Final Project</title>
   </head>
   <body>
