--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="finalProject-checkers-game.css" />
+    <link rel="stylesheet" href="checkers-game.css" />
     <script src="./js/BoardManager.js"></script>
     <script src="./js/Piece.js"></script>
     <script src="./js/Game.js"></script>
     <script src="./js/App.js"></script>
 
-    <title>Final Project</title>
+    <title>Checkers Game</title>
   </head>
   <body>
-    <h1>Cyber4s final project-Checkers game!!!</h1>
+    <h1>Cyber4s - Checkers Game!!!</h1>
     <h2>By Guy Lazarof</h2>
   </body>
 </html>
