--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Checkers Game</title>
   </head>
   <body>
-    <h1>Cyber4s - Checkers Game!!!</h1>
+    <h1>Checkers Game!!!</h1>
     <h2>By Guy Lazarof</h2>
   </body>
 </html>
